# rust-backend

./: .env  docker-compose.yaml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/handlers/: mod.rs  posts.rs  root.rs
backend/src/routers/: mod.rs  routes.rs
backend/src/types/: book_post.rs  mod.rs  root_msg.rs
